--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,9 @@ header .container-fluid{
 }
 .sign{
 	width: 370px;
+	background: url(../images/111.png) no-repeat 100% 2%;
+	cursor: pointer;
+	opacity: 0;
 }
 .sign p{
 	width: 345px;
@@ -93,10 +96,6 @@ header .container-fluid{
     background: #fff;
     z-index: 1;
 }
-.sign{
-    background: url(../images/111.png) no-repeat 100% 2%;
-
-}
 .sign:before{
     content: '';
     position: absolute;
@@ -104,8 +103,8 @@ header .container-fluid{
     left: 0;
     right: 0;
     height: 12px;
-    background: url(../images/9DD4D767.png) no-repeat 40% 0;
-    background-size: 70%;
+    background: url(../images/9DD4D767.png) no-repeat 34% 0;
+    background-size: 81%;
 }
 .about{
 	padding: 38px 0 32px 0;
@@ -208,17 +207,10 @@ footer p{
 }
 .carousel-caption{
 	width: 100%;
-    left: -100%;
+    left: 0;
     bottom: 0;
     background: rgba(229, 143, 42, .5);
     padding: 0;
-    -webkit-transition: left .3s linear;
-    -moz-transition: left .3s linear;
-    -o-transition: left .3s linear;
-    transition: left .3s linear;
-}
-.active .carousel-caption{
-	left: 0;
 }
 .carousel-caption h2{
 	font-size: 39px;
@@ -296,6 +288,10 @@ footer a:hover{
 	}
 	.sign p {
 	    width: 90%;
+	}
+	.sign:before {
+	    background: url(../images/9DD4D767.png) no-repeat 30% 0;
+	    background-size: 76%;
 	}
 }
 @media (max-width: 991px){
@@ -443,7 +439,8 @@ footer a:hover{
 	    left: 0;
 	    right: 0;
 	    height: 22px;
-	    background-size: 60%;
+	    background-size: 65%;
+	    background-position: 39% 0;
 	}
 	figcaption {
 	    font-size: 30px;
